# RAG-bot-using-pinecone

./: .env.example  .gitignore  README.md  app.py  ingest_documents.py  packages.txt  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
